crates/solidity-v2/testing/snapshots/cst_output/VersionPragma/double_quotes_string/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected PragmaDoubleQuotedStringLiteral. One of DoubleQuotedVersionLiteral, PragmaCaret, PragmaEqual, PragmaGreaterThan, PragmaGreaterThanEqual, PragmaLessThan, PragmaLessThanEqual, PragmaTilde, SingleQuotedVersionLiteral, VersionSpecifier was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/VersionPragma/double_quotes_string/input.sol:3:10]
   │
 3 │ solidity "1.2.3"
   │          ───┬───  
   │             ╰───── Error occurred here.
───╯
